Aligns availability fixed table header with dots

--- a/app/views/styles/availability.less
+++ b/app/views/styles/availability.less
@@ -90,12 +90,9 @@
 
 #availability {
     width: 100%;
+    table-layout: fixed;
     td {
       height: 31px;
-    }
-    td.dot,
-    td.score {
-        width: 52px;
     }
     td.score {
       border-right: 1px solid #ccc;
@@ -112,14 +109,7 @@
             padding-bottom:10px;
             border-bottom: 1px solid #ccc;
             &.flag {
-                width:31px;
                 padding: 0 10px;
-            }
-            &.dot {
-                width:48px;
-            }
-            &.score {
-                width:47px;
             }
         }
       }
@@ -138,7 +128,6 @@
             &.flag {
                 padding: 0 10px 0 0;
                 vertical-align: middle;
-                width:30px;
                 a {
                   padding: 12px 5px;
                 }
@@ -152,12 +141,10 @@
     top: 0px;
     display: none;
     background-color: white;
+    width: 100%;
+    table-layout: fixed;
     td {
       height: 31px;
-    }
-    td.dot,
-    td.country {
-        width: 52px;
     }
     thead {
       height:56px;
@@ -170,11 +157,7 @@
             padding-bottom:10px;
             border-bottom: 1px solid #ccc;
             &.flag {
-                width:31px;
                 padding: 0 10px;
-            }
-            &.dot {
-                width:48px;
             }
         }
     }
